# SlicerOpenLIFU

./: .gitignore  CMakeLists.txt  README.md
OpenLIFUData/: CMakeLists.txt  OpenLIFUData.py
OpenLIFUData/Resources/UI/: OpenLIFUData.ui
OpenLIFUHome/: CMakeLists.txt  OpenLIFUHome.py
OpenLIFUHome/Resources/: python-requirements.txt
OpenLIFUHome/Resources/UI/: OpenLIFUHome.ui
OpenLIFULib/: CMakeLists.txt
OpenLIFULib/OpenLIFULib/: __init__.py  algorithm_input_widget.py  busycursor.py  coordinate_system_utils.py  guided_mode_util.py  lazyimport.py  parameter_node_utils.py  session.py  simulation.py  solution.py  targets.py  transducer.py  util.py
OpenLIFULib/OpenLIFULib/Resources/: python-requirements.txt
OpenLIFUPrePlanning/: CMakeLists.txt  OpenLIFUPrePlanning.py
OpenLIFUPrePlanning/Resources/UI/: OpenLIFUPrePlanning.ui
OpenLIFUProtocolConfig/: CMakeLists.txt  OpenLIFUProtocolConfig.py
OpenLIFUProtocolConfig/Resources/UI/: OpenLIFUProtocolConfig.ui
OpenLIFUSonicationControl/: CMakeLists.txt  OpenLIFUSonicationControl.py
OpenLIFUSonicationControl/Resources/UI/: OpenLIFUSonicationControl.ui
OpenLIFUSonicationPlanner/: CMakeLists.txt  OpenLIFUSonicationPlanner.py
OpenLIFUSonicationPlanner/Resources/UI/: OpenLIFUSonicationPlanner.ui
OpenLIFUTransducerTracker/: CMakeLists.txt  OpenLIFUTransducerTracker.py
OpenLIFUTransducerTracker/Resources/UI/: OpenLIFUTransducerTracker.ui
